# cybernationlism_in_Wuchang

./: .gitignore  01_zhihu_crawler_config.py  02_run_zhihu_crawler.py  03_run_bilibili_crawler.py  03_知乎爬虫运行与反爬说明.md  04_bilibili_subtitle_and_transcript.py  04_上传到GitHub说明.md  README.md  pyproject.toml  requirements.lock.txt  requirements.txt  requirements_bilibili_subtitle.txt
Document/AAAI_2026_Press_Formatting_Instructions_for_Authors_Using_LaTeX/: Patriotic_Camouflage.aux  Patriotic_Camouflage.bib  Patriotic_Camouflage.tex
Document/AEJMC_RIP/: references.bib  report.aux  report.bbl  report.bcf  report.blg  report.out  report.tex
Document/APA7th_AEJMC/: report.aux  report.bbl  report.bcf  report.blg  report.fff  report.out  report.tex  report.ttt
Document/COGS181_AAAI_report/: references.bib  report.bbl  report.tex
archive/: README.md  operational_guide.md
archive/cogs181_course/: UCSD COGS 181 Winter 2026 - Final Project.htm
archive/latex_build/: report.aux  report.blg
docs/: DATA_STATEMENT.md  RESEARCH_DESIGN_GUIDE.md  RESEARCH_PLAN_2026H2.md
results/: labels_minilm_k10.npy  labels_minilm_k100.npy  labels_minilm_k20.npy  labels_minilm_k50.npy  labels_text2vec_k10.npy  labels_text2vec_k100.npy  labels_text2vec_k20.npy  labels_text2vec_k50.npy  rq1_summary.txt  rq2_regression_summary.txt  rq2_summary.txt  sweep_log.txt
results/finetune/: smoke_result.json  sweep_round1.json  sweep_round2_roberta.json  sweep_round2_roberta_binary.json  sweep_round2_roberta_maxlen128.json  sweep_round2_roberta_maxlen256.json  (+1 more)
src/: README.md
src/analyze/: 25_rq2_mi.R  (+10 more)
(+21 files in other folders)
